<resources>
    <string name="app_name">How is Your Day</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_sentence">Tell me a bit...</string>
    <string name="press_for_detection">Press for Recommendations</string>
    <string name="recommend">Recommend</string>
    <string name="descr">descr</string>
</resources>
